# posit-hls

./: .gitignore  README.md
Bambu/: clean_results.py
Bambu/add/: add.c
Bambu/common_vhdl/: float2posit_32_32_300.vhd  float2posit_32_32_500.vhd  float2posit_64_32_300.vhd  float2posit_64_32_500.vhd  my_sqrt_float_32_100.vhd  my_sqrt_float_32_300.vhd  my_sqrt_float_32_500.vhd  my_sqrt_float_32_700.vhd  my_sqrt_float_64_100.vhd  my_sqrt_float_64_300.vhd  my_sqrt_float_64_500.vhd  my_sqrt_float_64_700.vhd  my_sqrt_posit_32_32_100.vhd  my_sqrt_posit_64_64_100.vhd  posit2float_32_32_300.vhd  posit2float_32_32_500.vhd  posit2float_32_64_300.vhd  posit2float_32_64_500.vhd
Bambu/div/: div.c  test.xml
Bambu/float2posit/: float2posit.c  float2posit_fake.c  run_all.sh
Bambu/mult/: mult.c  run_all.sh  test.xml
Bambu/polybench/: polybench.h
Bambu/posit2float/: converters_lib.xml  posit2float.c  posit2float_fake.c  test.xml
Bambu/sqrt/: my_sqrt.c  run_all.sh  sqrt.c  test.xml
Vitis_HLS/: get_results.py
Vitis_HLS/add/: add.cpp  results.txt  run_all.sh  run_f32.tcl  run_f64.tcl  run_p32.tcl  run_p64.tcl
Vitis_HLS/div/: div.cpp
Vitis_HLS/mult/: mult.cpp  results.txt  run_all.sh  run_f32.tcl  run_f64.tcl  run_p32.tcl  run_p64.tcl
error_eval/results/accuracy/: CMakeLists.txt  README.md  accuracy_results.txt
error_eval/results/accuracy/src/: accuracy.cpp
plots/: cmp.csv  plot_bambu_operators.ipynb  plot_bambu_operators_tight.ipynb  plot_bambu_polybench.ipynb  plot_vitis_operators.ipynb  plot_vitis_operators_tight.ipynb  plot_vitis_polybench.ipynb
(+469 files in other folders)
